# evaluation_report

./: .env.example  README.md  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  otel-collector-config.yaml  prometheus.yml
.github/workflows/: ci-cd.yml  ci.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/alembic/versions/: 0001_core.py  0002_courses.py  0003_gradebook.py  0004_messages.py  0005_notifications.py  0006_course_roles.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  course_role.py  courses.py  gradebook.py  message.py  notification.py  telegram.py
backend/app/core/: config.py  logging.py  metrics.py  security.py  tracing.py
backend/app/crud/: course_role.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  course.py  course_role.py  enrolment.py  gradebook.py  material.py  message.py  notification.py  refresh_token.py  role.py  telegram_token.py  user.py  user_role.py
backend/app/schemas/: course.py  course_role.py  gradebook.py  material.py  message.py  notification.py  telegram.py  user.py
backend/app/services/: courses.py  gradebook.py  message.py  notification.py  telegram.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/assets/: main.css
frontend/src/router/: index.js
frontend/src/stores/: auth.js  chat.js  courseRoles.js  courses.js  gradebook.js
frontend/src/views/: AssignmentsView.vue  CourseRolesView.vue  CoursesView.vue  LoginView.vue  MaterialsView.vue  RegisterView.vue
infra/: docker-compose.yml
tests/: .env.example  conftest.py  test_auth.py  test_course_roles.py  test_courses.py  test_gradebook.py  test_health.py  test_messages.py  test_metrics.py  test_notifications.py  test_telegram.py
traefik/: traefik.yml
